--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
     <title>Fadahunsi</title>
 </head>
+
 <body>
-    hello
-
-
-
-    <script src="./index.js"></script>
+    <section class="body_wrapper">
+    <header>
+        <nav>
+            <ul>
+              <li>
+                  P
+              </li>
+              <li>
+                <i class="fa-solid fa-clock"></i> <span>0 Min</span>
+              </li>
+              <li>
+                <i class="fa-regular fa-user"></i>
+              </li>
+              <li>
+                <i class="fa-solid fa-arrow-down-left"></i> <span>0</span>
+              </li>
+              <li>
+                <i class="fa-solid fa-check"></i>
+              </li>
+              <li>
+                <i class="fa-light fa-cloud"></i>
+              </li>
+              <li>
+                  <AiOutlineMore/>
+              </li>
+            </ul>
+          </nav>
+    </header>
+            <div className="details_container">
+      <h1>Front-end developer test project</h1>
+      <p>
+        The goal of this project, is to make a page that looks exactly like this one, and has
+        the ability to create h1 test simply by typing / then 1, then typing
+        text and hitting enter.
+      </p>
+    </div>
+    </section>
+        <script src="./index.js"></script>
 </body>
+
 </html>
