add styles for details

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
                 </ul>
             </nav>
         </header>
-        <div className="details_container">
+        <div class="details_container">
             <h1>Front-end developer test project</h1>
             <p>
                 The goal of this project, is to make a page that looks exactly like this one, and has
