--- a/src/index.html
+++ b/src/index.html
@@ -17,19 +17,22 @@
                         P
                     </li>
                     <li>
-                        <i class="fa-solid fa-clock"></i> <span>0 Min</span>
+                        <img src="./img/clock.png" alt="clock_img" /> <span>0 Min</span>
                     </li>
                     <li>
-                        <i class="fa-regular fa-user"></i>
+                        <img src="./img/profile.png" alt="profile_img" />
                     </li>
                     <li>
-                        <i class="fa-solid fa-arrow-down-left"></i> <span>0</span>
+                        <img src="./img/left-down.png" alt="arrowleft_img" /> <span>0</span>
                     </li>
                     <li>
-                        <i class="fa-solid fa-check"></i>
+                        <img src="./img/checked.png" alt="checked_img" />
                     </li>
                     <li>
-                        <i class="fa-light fa-cloud"></i>
+                        <img src="./img/cloud.png" alt="cloud_img" />
+                    </li>
+                    <li>
+                        <img src="./img/more.png" alt="more_img" />
                     </li>
                     <li>
                         <AiOutlineMore />
@@ -45,6 +48,10 @@
                 text and hitting enter.
             </p>
         </div>
+
+        <section>
+            <div class="textArea" id="1" contenteditable placeholder="Type / for blocks"></div>
+          </section>
     </section>
     <script src="./index.js"></script>
 </body>
